migrated guava function and predicate to java 8 style in rest request dispatcher